Fixed css: whitespace was not preserved.

--- a/CK.LogViewer.WebComponent/src/styles.css
+++ b/CK.LogViewer.WebComponent/src/styles.css
@@ -77,6 +77,10 @@ log-exception {
   width: 85%;
 }
 
+.log-text {
+  white-space: pre;
+}
+
 .log-content:hover {
   background-color: rgba(255, 255, 255, 0.1);
 }
